stylelint, eslint, lint fix

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "css-loader": "^6.6.0",
     "eslint": "^8.57.0",
     "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-i18next": "^5.1.2",
     "eslint-plugin-react": "^7.34.1",
     "file-loader": "^6.2.0",
     "globals": "^15.1.0",
@@ -37,6 +38,8 @@
     "sass": "^1.49.9",
     "sass-loader": "^12.6.0",
     "style-loader": "^3.3.1",
+    "stylelint": "^14.5.3",
+    "stylelint-config-standard-scss": "^3.0.0",
     "ts-loader": "^9.2.6",
     "ts-node": "^10.5.0",
     "typescript": "^5.3.3",
@@ -48,7 +51,10 @@
   "scripts": {
     "start": "webpack serve --env port=3000",
     "build:prod": "webpack --env mode=production",
-    "build:dev": "webpack --env mode=development"
+    "build:dev": "webpack --env mode=development",
+    "lint:ts": "eslint \"**/*.{ts,tsx}\" --fix",
+    "lint:style": "stylelint \"**/*.scss\"",
+    "lint:style:fix": "stylelint \"**/*.scss\" --fix"
   },
   "keywords": [],
   "author": "Daniil Akhiyan",
