--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
   "devDependencies": {
     "@babel/core": "^7.17.5",
     "@babel/preset-env": "^7.16.11",
+    "@babel/preset-typescript": "^7.16.7",
     "@eslint/js": "^9.2.0",
     "@svgr/webpack": "^6.2.1",
+    "@types/jest": "^27.4.1",
     "@types/node": "^20.11.24",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
@@ -34,6 +36,7 @@
     "file-loader": "^6.2.0",
     "globals": "^15.1.0",
     "html-webpack-plugin": "^5.5.0",
+    "jest": "^27.5.1",
     "mini-css-extract-plugin": "^2.5.3",
     "sass": "^1.49.9",
     "sass-loader": "^12.6.0",
@@ -54,7 +57,8 @@
     "build:dev": "webpack --env mode=development",
     "lint:ts": "eslint \"**/*.{ts,tsx}\" --fix",
     "lint:style": "stylelint \"**/*.scss\"",
-    "lint:style:fix": "stylelint \"**/*.scss\" --fix"
+    "lint:style:fix": "stylelint \"**/*.scss\" --fix",
+    "unit": "jest --config ./config/jest/jest.config.ts"
   },
   "keywords": [],
   "author": "Daniil Akhiyan",
