feat: добавил react-testing library, добавил тесты для кнопки и сайдбара

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,11 +12,14 @@
         "baseUrl": ".",
         "paths": {
             "*" : ["./src/*"]
-        }
+        },
     },
     "ts-node": {
         "compilerOptions": {
             "module": "CommonJS"
         }
-    }
+    },
+    "include": [
+        "./config/jest/setupTest.ts"
+    ]
 }
