--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,5 +18,9 @@
         "compilerOptions": {
             "module": "CommonJS"
         }
-    }
+    },
+    "include": [
+        "./src/**/*.ts",
+        "./src/**/*.tsx",
+    ]
 }
