--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,6 @@ jobs:
       - name: linting ts
         run: npm run lint:ts
       - name: linting css
-        run: npm run lint:scss
+        run: npm run lint:style
       - name: unit testing
         run: npm run test:unit
