--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -3,5 +3,8 @@
   "rules": {
     "indentation": [4],
     "selector-class-pattern": null
-  }
+  },
+  "ignoreFiles": [
+    "build/css/**/*.scss"
+  ]
 }
