--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,4 +26,4 @@ jobs:
       - name: linting css
         run: npm run lint:style
       - name: unit testing
-        run: npm run test:unit
+        run: npm run unit
