--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,5 +27,7 @@ jobs:
         run: npm run lint:style
       - name: unit testing
         run: npm run unit
+      - name: build storybook
+        run: npm run storybook:build
       - name: ui test
         run: npm run test:ui:ci
