--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
     "storybook:build": "build-storybook -c ./config/storybook",
     "test:ui": "npx loki test",
     "test:ui:ok": "npx loki approve",
-    "test:ui:ci": "loki --requireReference --reactUri file:./storybook-static"
+    "test:ui:ci": "loki --requireReference --reactUri file:$PWD/storybook-static"
   },
   "keywords": [],
   "author": "Daniil Akhiyan",
