--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,8 +26,10 @@ jobs:
       - name: linting css
         run: npm run lint:style
       - name: unit testing
+        if: always()
         run: npm run unit
       - name: build storybook
         run: npm run storybook:build
       - name: ui test
+        if: always()
         run: npm run test:ui:ci
