--- a/package.json
+++ b/package.json
@@ -92,6 +92,10 @@
         "target": "chrome.app",
         "preset": "iPhone 7"
       }
+    },
+    "diffingEngine": "pixelmatch",
+    "pixelmatch": {
+      "threshold": 0.1
     }
   }
 }
