--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "globals": "^15.1.0",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^27.5.1",
-    "loki": "^0.35.1",
+    "loki": "0.35.0",
     "mini-css-extract-plugin": "^2.5.3",
     "sass": "^1.49.9",
     "sass-loader": "^12.6.0",
