--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "storybook": "start-storybook -p 6006 -c ./config/storybook",
     "storybook:build": "build-storybook -c ./config/storybook",
     "test:ui": "npx loki test",
-    "test:ui:ok": "npx loki approve",
+    "test:ui:ok": "npx loki update",
     "test:ui:ci": "loki --requireReference --reactUri file:$PWD/storybook-static"
   },
   "keywords": [],
