--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@storybook/react": "^6.4.19",
     "@storybook/testing-library": "^0.0.9",
     "@svgr/webpack": "^6.2.1",
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/react": "^12.1.3",
     "@types/jest": "^27.4.1",
     "@types/node": "^20.11.24",
     "@types/react": "^17.0.39",
@@ -45,6 +47,7 @@
     "file-loader": "^6.2.0",
     "globals": "^15.1.0",
     "html-webpack-plugin": "^5.5.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^27.5.1",
     "loki": "0.35.0",
     "mini-css-extract-plugin": "^2.5.3",
