add frontend for loki

--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "jest": "^27.5.1",
     "loki": "0.35.0",
     "mini-css-extract-plugin": "^2.5.3",
+    "reg-cli": "^0.18.10",
     "sass": "^1.49.9",
     "sass-loader": "^12.6.0",
     "style-loader": "^3.3.1",
@@ -76,7 +77,10 @@
     "storybook:build": "build-storybook -c ./config/storybook",
     "test:ui": "npx loki test",
     "test:ui:ok": "npx loki update",
-    "test:ui:ci": "loki --requireReference --reactUri file:$PWD/storybook-static"
+    "test:ui:ci": "loki --requireReference --reactUri file:$PWD/storybook-static",
+    "visual:report": "npm run visual:report:json && npm run visual:report:html",
+    "visual:report:json": "node scripts/generate-visual-json-report.js",
+    "visual:report:html": "reg-cli --from .loki/report.json --report .loki/report.html"
   },
   "keywords": [],
   "author": "Daniil Akhiyan",
